# SMC4WM

./: Dockerfile  README.md
src/: BN.cpp  BN.h  BooleanNet.cpp  BooleanNet.hpp  CMakeLists.txt  CPD.cpp  CPD.h  DBN.cpp  DBN.h  ModelSearch.cpp  ModelSearch.h  SMC_wm.cpp  SampleChecker.cpp  Sampler.cpp  Sampler.h  Tools.cpp  Tools.h  checker.cpp  checker.hpp  interface.cpp  interface.hpp  lex.yy.cpp  linearEquation.cpp  linearEquation.h  main.cpp  parser.hpp  parser.tab.cpp  parser.tab.hpp
testcase/: bad.txt  bmi_config.txt  cra_cag_praise_2018-11-28_22-22-20.json  initialConfig1.txt  intervention  model  model1  newmodel.txt  prop  propBoolean  test
tetrad/: functions_fr.properties  trace.txt
tetrad/javahelp/: Map.jhm  TetradHelp.hs
tetrad/javahelp/manual/boxes/data/: data_set_list.html
tetrad/javahelp/manual/boxes/search/: bpc.html  cfci.html  cpc.html  mbf.html  pcd.html
tetrad/javax/help/plaf/basic/images/: OnItemCursor.properties
tetrad/resources/: changelog.txt  configuration-play.xml  configuration-post.xml  configuration2.xml  version
trace/: trace_0
